:bug: fix: correção para scrollbar visivel na home

--- a/App/View/assets/css/layout.css
+++ b/App/View/assets/css/layout.css
@@ -34,7 +34,6 @@
     font-family: var(--font-secondary);
     display: grid;
     height: 100vh;
-    max-height: 100vh;
     overflow: hidden;
     grid-template-areas: 
         "main"
